--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Montserrat', sans-serif;
+    background-color: #C5DDF5;
 }
 
 p{
@@ -41,17 +42,27 @@ p{
     width: 4rem;
 }
 
+.nation-icon{
+    width: 4rem;
+}
+
 .talent-icon{
     width: 4rem;
 }
 
+/* OLD CSS*/
 .passive-talent-icon{
     width: 3rem;
 }
-
 .constellations-icon{
     width: 3rem;
 }
+
+
+.genshin-table-icon{
+    width: 4rem;
+}
+
 
 .character-question-icon{
     height: 4.5rem;
@@ -85,4 +96,15 @@ p{
   
   .big-zoom:hover {
     transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
+
+  .ganyu-blue-test-1{
+    background-color: #5974BF;
+    background-color: #252D8C;
+    background-color: #C5DDF5
+    
+  }
+
+  .gold-star{
+    color: #F8DEA8;
   }
