Updated look of CharacterProfile.jsx, added some touches to navbar such as shadows for nav-links and fixed nav-links to properly go to the right component. Also made some slight adjustments to the Homepage.

--- a/frontend/src/components/ui/Character/CharcterCard/CharacterCard.css
+++ b/frontend/src/components/ui/Character/CharcterCard/CharacterCard.css
@@ -5,9 +5,10 @@ a{
 
 .ellipse{
     border-radius: 50%;
+    cursor: "pointer";
 }
 
 .ellipse:hover{
-    background-color:#9694B1 ;
-    color: white
+    background-color:#F8DEA7 ;
+    color: #333333;
 }
