--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1,6 +1,9 @@
-body{
+html, 
+body, 
+#root{
     font-family: 'Montserrat', sans-serif;
     background-color: #7F8CAA;
+    height: 100%;
 }
 
 p{
