--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -2,8 +2,18 @@ html,
 body, 
 #root{
     font-family: 'Montserrat', sans-serif;
-    background-color: #7F8CAA;
-    height: 100%;
+    /* background-color: #7F8CAA; */
+    background-color: white;
+    /* background-image: url(/images/genshin-wish-background.webp); */
+    /* background-image: url(https://upload-os-bbs.hoyolab.com/upload/2021/06/19/21867498/134c7cddf81c803ebd0876925f319f40_6631276759320516950.png?x-oss-process=image%2Fresize%2Cs_1000%2Fauto-orient%2C0%2Finterlace%2C1%2Fformat%2Cwebp%2Fquality%2Cq_70); */
+    /* background-image: url(https://genshin.jmp.blue/characters/ganyu/gacha-splash);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: top; */
+    height: 100%;   
+    padding-top: 20px; 
+
 }
 
 p{
@@ -28,11 +38,6 @@ p{
     font-weight: 700;
 }
 
-.skill-talent-block{
-   display: inline-block;
-   margin: 0 0.5rem 0 0;
-}
-
 .character-icon{
     width: 4rem;
 }
@@ -48,24 +53,19 @@ p{
 .nation-icon{
     width: 4rem;
 }
-
 .talent-icon{
     width: 4rem;
 }
-
-/* OLD CSS*/
 .passive-talent-icon{
-    width: 3rem;
+    width: 4rem;
 }
-.constellations-icon{
-    width: 3rem;
+.constellation-icon{
+    width: 4rem;
 }
-
 
 .genshin-table-icon{
     width: 4rem;
 }
-
 
 .character-question-icon{
     height: 4.5rem;
@@ -86,28 +86,56 @@ p{
 .zoom {
     transition: transform .2s; /* Animation */
     margin: 0 auto;
-  }
-  
-  .zoom:hover {
+}
+
+.zoom:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  }
-  
-  .big-zoom {
+}
+
+.big-zoom {
     transition: transform .2s; /* Animation */
     margin: 0 auto;
-  }
-  
-  .big-zoom:hover {
-    transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  }
+}
 
-  .ganyu-blue-test-1{
+.big-zoom:hover {
+    transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.ganyu-blue-test-1{
     background-color: #5974BF;
     background-color: #252D8C;
     background-color: #C5DDF5
-    
-  }
 
-  .gold-star{
+}
+
+.gold-star{
     color: #F8DEA8;
-  }
+    font-size: 2rem;
+}
+
+/***********************************************/
+/******         General Components         *****/
+/***********************************************/
+.genshin-card-container{
+    background-color: rgba(245, 248, 250, 1);
+    border-color: #dee2e6;
+    /* border-color: #F8DEA7; */
+    /* border-radius: 1rem; */
+    border-style: solid;
+    border-width: 2px;
+    /* box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); */
+    color: black;
+    padding: 1.25rem;
+}   
+
+.sub-header{
+    color: #9AA6B2;
+}
+
+.accordion-item{
+    margin: 0;
+}
+
+.scroll-target {
+  scroll-margin-top: 110px; /* adjust based on your navbar height */
+}
