--- a/frontend/src/components/ui/Navbar/Navbar.css
+++ b/frontend/src/components/ui/Navbar/Navbar.css
@@ -10,6 +10,16 @@
     text-shadow: #333446 5px 0 20px;
 }
 
+/* */
+.navbar::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #F8DEA7;
+}
 
 /*******************************************************************************/
 /***********            Currently Not In Use                       *************/
