--- a/frontend/src/components/ui/Navbar/Navbar.css
+++ b/frontend/src/components/ui/Navbar/Navbar.css
@@ -1,16 +1,12 @@
-/* Dark Mode */
-.navbar-dark .navbar-brand:hover, 
-.navbar-dark .nav-link:hover{
-    text-shadow: #F8DEA7 5px 0 20px;
+.navbar-logo{
+    height: 3.5rem;
+    margin: 0 0.5rem 0 0;
+}
+.navbar-brand{
+    margin: 0 1rem 0 0;
 }
 
-/* Light Mode */
-.navbar-light .navbar-brand:hover, 
-.navbar-light .nav-link:hover{
-    text-shadow: #333446 5px 0 20px;
-}
-
-/* */
+/* Bottom border decoration */
 .navbar::after {
   content: "";
   position: absolute;
@@ -19,92 +15,4 @@
   height: 2px;
   width: 100%;
   background-color: #F8DEA7;
-}
-
-/*******************************************************************************/
-/***********            Currently Not In Use                       *************/
-/*******************************************************************************/
-/* Black navbar */
-.ga-navbar-dark {
-  background-color: #15171a;
-  transition: background-color 0.3s ease;
-}
-.ga-navbar-dark .navbar-brand{
-    color: #d9bc7c;
-}
-.ga-navbar-dark .nav-link{
-    color: #F8DEA7;
-}
-
-/* Navy navbar */
-.bg-navy{
-    background-color: #333446;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* optional shadow */
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-
-}
-.bg-navy .navbar-brand{
-    color: white;
-}
-.bg-navy .nav-link{
-    color: white;
-}
-
-/* White navbar */
-.bg-white{
-    background-color: #ffffff;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* optional shadow */
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-
-}
-.bg-white .navbar-brand{
-    color: #333446;
-}
-.bg-white .nav-link{
-    color: #333446;
-}
-
-
-/* Semi-transparent navbar */
-.bg-transparent{
-    background-color: rgba(255, 255, 255, 0.85); /* semi-transparent */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);   /* optional depth */
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-}
-.bg-transparent .navbar-brand{
-    color: #d9bc7c;
-}
-.bg-transparent .nav-link{
-   color: #F8DEA7;
-}
-
-/* Search button */
-.btn-navy{
-    background-color: #333446;
-    border-color: #B8CFCE;
-    color: #B8CFCE;
-}
-.btn-grey{
-    background-color: #B8CFCE;
-    color: #333446;
-}
-
-.btn-gold{
-    background-color: #F8DEA7;
-    color: #333446;
-}
-.btn-gold:hover{
-    background-color: #333446;
-    border-color: #F8DEA7;
-    color: #F8DEA7;
-}
-
-.btn-gold-inverse{
-    background-color: #333446;
-    border-color: #F8DEA7;
-    color: #F8DEA7;
-}
-.btn-gold-inverse:hover{
-    background-color: #F8DEA7;
-    color: #333446;
 }
